Removed underline from li on archive to prevent wrapping issues on tablet devices

--- a/public/css/blog.css
+++ b/public/css/blog.css
@@ -113,8 +113,6 @@ p code {
 
 #archive-list li {
   list-style: none;
-  border-bottom: dashed 1px #ddd;
-  display: inline-block;
 }
 
 a,
